# weather-app

./: .gitignore  Makefile  README.md  pyproject.toml
weather_app/templates/: history.html  index.html  weather.html
weather_app/templates/registration/: logged_out.html  login.html  registration.html
weather_app/weather_app/: settings.py  urls.py
weather_app/weather_app/weather/: api.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
